# IdentiFi

./: .env.example  .gitmodules  LICENSE  README.md  cassandra-with-sasi.Dockerfile  docker-compose-astra.yaml  docker-compose-non-astra.yaml  docker-compose.db.yaml  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  run.py  run.sh  send_mail.py  stop.py  stop.sh
auth/: .dockerignore  .gitignore  Dockerfile  auth-config.example.yaml  pyproject.toml  requirements.txt
auth/db_syncer/: __main__.py  syncer.py
auth/src/: lifespan.py  main.py  utils.py
auth/src/api_crud/: credentials.py  register.py  request_params.py  response.py  routers.py  unregister.py  users.py  utils.py
auth/src/commons/: __init__.py  exceptions.py  oauth2_password_bearer_extended.py  secret_maker.py  utils.py
auth/src/config/: __init__.py  config.py
auth/src/crud/: __init__.py  crud_ops.py  exceptions.py  syncer.py
auth/src/events/: __init__.py  events.py  producer.py
auth/src/kafka/: __init__.py  events.py  producer.py
auth/src/models/: __init__.py  service_provider_model.py
auth/src/oidc/: authorization_code_flow.py  authorization_code_token_request_params.py
auth/src/schemas/: __init__.py  principal_user.py  principal_user_client_id.py  service_provider.py  tokens.py  users.py
auth/src/security/: __init__.py  request_params.py  security.py  utils.py
auth/src/types/: __init__.py  scopes.py  user_types.py
email/: config.example.yaml  pyproject.toml
email/src/: main.py  send_mail.py
email/templates/: verification-code.html
(+68 files in other folders)
