[tool.poetry]
name = "email"
version = "0.1.0"
description = "email service"
authors = ["Kunal Sharma <happykunal@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sendgrid = "^6.11.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
confluent-kafka = "^2.3.0"
pydantic2avro = "^0.2.0"
pydantic-settings = {extras = ["yaml"], version = "^2.2.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
